# tryCmake

./: CMakeLists.txt
.github/workflows/: cmake-single-platform.yml
